objects/Integration_Data__mdt.object
<CustomObject>
    <fields>
        <fullName>ApiKey__c</fullName>
        <label>Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPoint__c</fullName>
        <label>EndPoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evironment__c</fullName>
        <description>This field is used to identify the environment from which the endpoint is being used</description>
        <label>Evironment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>staging</fullName>
                    <default>true</default>
                    <label>staging</label>
                </value>
                <value>
                    <fullName>venus</fullName>
                </value>
                <value>
                    <fullName>wework</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Headers__c</fullName>
        <label>Headers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HoursFilter__c</fullName>
        <label>HoursFilter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>POST</fullName>
                    <default>true</default>
                    <label>POST</label>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>GET</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Integration Data</label>
    <pluralLabel>Integrations Data</pluralLabel>
</CustomObject>